--- a/login.html
+++ b/login.html
@@ -20,13 +20,15 @@
         <p id="message"></p>
         <p>Don't have an account? <a href="register.html">Sign up</a></p>
     </div>
-
+    <script src="//code.tidio.co/y52anw0agxaj9ehjys9kl4woyzquvmsn.js" async></script>
     <!-- Loading Spinner and Blur Effect -->
     <div id="loadingSpinner" class="spinner">
         <div class="dot1"></div>
         <div class="dot2"></div>
     </div>
     <div id="blurOverlay" class="blur-overlay"></div>
+
+    
 
     <script>
         const apiUrl = "https://backend-recent-2.onrender.com";
