--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
     <nav id="nav-bar">
         <div class="welcome-msg">
             <span id="username"></span>
@@ -32,6 +33,8 @@
             </div>
         </div>
     </section>
+
+    <script src="//code.tidio.co/y52anw0agxaj9ehjys9kl4woyzquvmsn.js" async></script>
 
     <section class="services">
         <div class="service-item" id="withDrawal">
