--- a/orders.html
+++ b/orders.html
@@ -10,63 +10,75 @@
 
 <body>
 
-    <nav id="nav-bar">
-        <div class="welcome-msg">
+<nav id="nav-bar">
+    <div class="logo">
+        <img src="logo.svg" alt="Logo">
+    </div>
+    <div class="nav-items">
+        <div class="user-profile">
+            <img id="profilePic" src="user-profile.svg" alt="User Profile">
             <span id="username"></span>
         </div>
-        <div class="nav-items">
-            <img class="user-profile" id="profilePic" src="user-profile.svg" alt="">
-            <a href="index.html" class="user-signOut">Sign out</a>
+        <div class="dropdown">
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a href="profile.html?userId=userId">Profile</a>
+                <a href="orders.html?userId=userId">Orders</a>
+                <a href="referral.html?userId=userId">Referral</a>
+                <a href="index.html">Sign out</a>
+            </div>
         </div>
-    </nav>
+    </div>
+</nav>
 
-    <section class="orders-container">
-        <h1>Withdrawal History</h1>
-        <div id="orders" class="orders-list"></div>
-    </section>
+<section id="withdrawal-history">
+    <h2>Withdrawal History</h2>
+    <div id="history-container"></div>
+</section>
 
-    <script>
-        const apiUrl = "https://backend-recent-2.onrender.com";
+<script>
+    const apiUrl = "https://backend-recent-2.onrender.com";
 
-        document.addEventListener('DOMContentLoaded', async () => {
-            const userId = new URLSearchParams(window.location.search).get('userId');
-            if (!userId) {
-                window.location.href = 'login.html';
-                return;
-            }
+    document.addEventListener('DOMContentLoaded', async () => {
+        const userId = new URLSearchParams(window.location.search).get('userId');
+        if (!userId) {
+            window.location.href = 'login.html';
+            return;
+        }
 
-            try {
-                const response = await fetch(`${apiUrl}/orders/${userId}`, {
-                    method: 'GET',
-                    credentials: 'include'
+        try {
+            const response = await fetch(`${apiUrl}/withdrawal-history/${userId}`, {
+                method: 'GET',
+                credentials: 'include'
+            });
+
+            const payments = await response.json();
+            const historyContainer = document.getElementById('history-container');
+
+            if (response.ok) {
+                payments.forEach(payment => {
+                    const paymentCard = document.createElement('div');
+                    paymentCard.className = 'payment-card';
+                    paymentCard.innerHTML = `
+                        <div class="payment-card-content">
+                            <div><strong>Name:</strong> ${payment.Name}</div>
+                            <div><strong>Withdraw Coin:</strong> ${payment.withdrawCoin}</div>
+                            <div><strong>UPI ID:</strong> ${payment.UpiId}</div>
+                            <div><strong>Status:</strong> <span class="${payment.status}">${payment.status}</span></div>
+                            <div><strong>Date:</strong> ${new Date(payment.createdAt).toLocaleString()}</div>
+                        </div>
+                    `;
+                    historyContainer.appendChild(paymentCard);
                 });
-
-                const orders = await response.json();
-                if (response.ok) {
-                    const ordersList = document.getElementById('orders');
-                    orders.forEach(order => {
-                        const orderItem = document.createElement('div');
-                        orderItem.classList.add('order-item');
-                        orderItem.classList.add(order.status.toLowerCase()); // Add class based on status
-
-                        orderItem.innerHTML = `
-                            <div class="order-details">
-                                <p><strong>Amount:</strong> ${order.withdrawCoin}</p>
-                                <p><strong>UPI ID:</strong> ${order.UpiId}</p>
-                                <p><strong>Status:</strong> <span class="${order.status.toLowerCase()}">${order.status}</span></p>
-                                <p><strong>Date:</strong> ${new Date(order.createdAt).toLocaleString()}</p>
-                            </div>
-                        `;
-                        ordersList.appendChild(orderItem);
-                    });
-                } else {
-                    console.error('Error:', orders.message);
-                }
-            } catch (error) {
-                console.error('Error:', error);
+            } else {
+                historyContainer.textContent = 'Failed to load withdrawal history';
             }
-        });
-    </script>
+        } catch (error) {
+            console.error('Error:', error);
+        }
+    });
+</script>
+
 </body>
 
 </html>
