--- a/orders.html
+++ b/orders.html
@@ -9,7 +9,7 @@
 <body>
     <nav id="nav-bar">
         <div class="logo">
-            <img src="logo.svg" alt="Logo">
+            <img src="OrdersLogo.jpg" alt="Logo">
         </div>
         <div class="nav-items">
             <div class="nav-links">
