--- a/orders.html
+++ b/orders.html
@@ -48,16 +48,16 @@
                 window.location.href = 'login.html';
                 return;
             }
-            document.getElementById('profile').addEventListener('click', () => {
+            document.getElementById('profile-mobile').addEventListener('click', () => {
                 window.location.href = `profile.html?userId=${userId}`;
             });
-            document.getElementById('order').addEventListener('click', () => {
+            document.getElementById('order-mobile').addEventListener('click', () => {
                 window.location.href = `orders.html?userId=${userId}`;
             });
-            document.getElementById('Referrals').addEventListener('click', () => {
+            document.getElementById('Referrals-mobile').addEventListener('click', () => {
                 window.location.href = `referral.html?userId=${userId}`;
             });
-            document.getElementById('signOut').addEventListener('click', () => {
+            document.getElementById('signOut-mobile').addEventListener('click', () => {
                 window.location.href = `index.html?userId=${userId}`;
             });
 
