--- a/register.html
+++ b/register.html
@@ -16,8 +16,8 @@
             <input type="password" id="password" placeholder="Password" required>
             <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
 
-            <!-- New input field for referral code -->
-            <input type="text" id="referralCode" placeholder="Referral Code (Optional)">
+            <!-- New input field for OTP verification -->
+            <input type="text" id="otp" placeholder="OTP" required>
 
             <button type="submit">Register</button>
         </form>
