--- a/register.html
+++ b/register.html
@@ -16,8 +16,11 @@
             <input type="password" id="password" placeholder="Password" required>
             <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
 
-            <!-- New input field for OTP verification -->
-            <input type="text" id="otp" placeholder="OTP" required>
+            <!-- New input field for OTP -->
+            <div>
+                <input type="text" id="otp" placeholder="OTP" readonly>
+                <button type="button" id="generateOTP">Generate OTP</button>
+            </div>
 
             <button type="submit">Register</button>
         </form>
