--- a/register.html
+++ b/register.html
@@ -16,11 +16,8 @@
             <input type="password" id="password" placeholder="Password" required>
             <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
 
-            <!-- New input field for OTP -->
-            <div>
-                <input type="text" id="otp" placeholder="OTP" readonly>
-                <button type="button" id="generateOTP">Generate OTP</button>
-            </div>
+            <!-- New input field for referral code -->
+            <input type="text" id="referralCode" placeholder="Referral Code (Optional)">
 
             <button type="submit">Register</button>
         </form>
