--- a/orders.html
+++ b/orders.html
@@ -60,6 +60,18 @@
             document.getElementById('signOut-mobile').addEventListener('click', () => {
                 window.location.href = `index.html?userId=${userId}`;
             });
+            document.getElementById('profile').addEventListener('click', () => {
+                window.location.href = `profile.html?userId=${userId}`;
+            });
+            document.getElementById('order').addEventListener('click', () => {
+                window.location.href = `orders.html?userId=${userId}`;
+            });
+            document.getElementById('Referrals').addEventListener('click', () => {
+                window.location.href = `referral.html?userId=${userId}`;
+            });
+            document.getElementById('signOut').addEventListener('click', () => {
+                window.location.href = `index.html?userId=${userId}`;
+            });
 
             try {
                 const response = await fetch(`${apiUrl}/withdrawal-history/${userId}`, {
