--- a/success.html
+++ b/success.html
@@ -59,6 +59,12 @@
             }
         }
 
+        #amount{
+            font-weight: bold;
+            font-size: 25px;
+            
+        }
+
         .text {
             display: flex;
             flex-direction: column;
@@ -173,7 +179,7 @@
         </div>
         <div class="text">
             <h1>Success</h1>
-            <h2>Withdrawal request of ₹ <span id="amount">$$$</span> is received successfully.</h2>
+            <h2>Amount of  ₹<span id="amount">$$$</span> withdrawn successfully.</h2>
             <p>Amount will be credited to your account within 24 hours.</p>
         </div>
         <button id="View">View Details</button>
