--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,13 @@
 
 <body>
 
+    <div id="spinner" class="spinner-overlay">
+        <div class="spinner-container">
+            <div class="spinner-text">Loading Profile</div>
+            <div class="spinner"></div>
+        </div>
+    </div>
+
     <nav id="nav-bar">
         <div class="welcome-msg">
             <span id="username"></span>
@@ -42,28 +49,20 @@
             <span class="service-label">Withdrawal</span>
         </div>
         <div class="service-item" id="Orders">
-
             <img src="orders.png" alt="">
             <span class="service-label">Orders</span>
-
         </div>
         <div class="service-item" id="Promotion">
-
             <img src="promotion.png" alt="">
             <span class="service-label">Promotion</span>
-
         </div>
         <div class="service-item" id="Address">
-
             <img src="address.png" alt="">
             <span class="service-label">Address</span>
-
         </div>
         <div class="service-item" id="Security">
-
             <img src="account-security.png" alt="">
             <span class="service-label">Account Security</span>
-
         </div>
         <div class="service-item" id="About">
             <a href="">
@@ -85,6 +84,11 @@
         const apiUrl = "https://backend-recent-2.onrender.com";
 
         document.addEventListener('DOMContentLoaded', async () => {
+            const spinner = document.getElementById('spinner');
+            const hideSpinner = () => {
+                spinner.style.display = 'none';
+            };
+
             document.getElementById("log").addEventListener("click", () => {
                 window.location.href = "index.html";
             });
@@ -110,7 +114,6 @@
                     document.getElementById('ip').textContent = data.ip;
 
                     document.getElementById('withDrawal').addEventListener('click', () => {
-
                         window.location.href = `withdraw.html?userId=${userId}`;
                     });
 
@@ -121,9 +124,7 @@
                         window.location.href = `orders.html?userId=${userId}`;
                     });
 
-
-
-
+                    hideSpinner();
                 } else {
                     console.error('Error:', data.message);
                 }
